Fix planet word spacing on android

--- a/src/components/Skills/SkillsStyles.scss
+++ b/src/components/Skills/SkillsStyles.scss
@@ -45,7 +45,7 @@ $planet-hover-distance: 3px;
         color: theme.$light;
         position: absolute;
         content: "HTML CSS JavaScript React Python Git GitHub Tailwind";
-        word-spacing: 30px;
+        word-spacing: 26px;
         font-size: 40px;
         width: max-content;
         left: var(--left);
